# rhonno

./: CMakeLists.txt  Graph.cxx  Graph.h  LICENSE.txt  MLPTracker.cxx  MLPTrackerMatrix.cxx  Makefile  Makefile.win32  NNO0001.TXMLP  NNOTracker.cxx  NetworkTrainer.cxx  README.md  RadonOptimizer.cxx  RadonTracker.cxx  RecallTXMLP.cpp  RhoNNO_LinkDef.h  TDataServe.cxx  TFD.h  TGCS.cxx  TGCS.h  TGNG.cxx  TGNG.h  TGNGTracker.cxx  TGNGTracker.h  TLVQ.cxx  TLVQ.h  TMLP.cxx  TMLP.h  TNNK.cxx  TNNK.h  TNeuralNetCell.cxx  TNeuralNetCell.h  TPerceptron.cxx  TPerceptron.h  TRadon.cxx  TRadon.h  TSGCS.cxx  TSGCS.h  TSGNG.cxx  TSGNG.h  (+13 more)
Data/: digi0  digi1  digi10  digi11  digi12  digi13  digi14  digi15  digi16  digi17  digi18  digi19  digi2  digi20  digi21  digi22  digi23  digi24  digi25  digi26  digi28  digi29  digi3  digi31  digi32  digi33  digi34  digi35  digi36  digi37  digi38  digi39  digi4  digi40  digi41  digi42  digi43  digi44  digi45  digi46  (+235 more)
Networks/: NNO0000.TXMLP  NNO0001.TXMLP  NNO0002.TXMLP  NNO0003.TXMLP  NNO0004.TXMLP  NNO0005.TXMLP  NNO0006.TXMLP  NNO0007.TXMLP  NNO0008.TXMLP  NNO0009.TXMLP  NNO0010.TXMLP  NNO0011.TXMLP  NNO0012.TXMLP  NNO0013.TXMLP  NNO0014.TXMLP  NNO0015.TXMLP  NNO0016.TXMLP  NNO0017.TXMLP  NNO0018.TXMLP  NNO0019.TXMLP  NNO0020.TXMLP  NNO0021.TXMLP  NNO0022.TXMLP  NNO0023.TXMLP  NNO0024.TXMLP  NNO0025.TXMLP  NNO0026.TXMLP  NNO0027.TXMLP  NNO0028.TXMLP  NNO0029.TXMLP  NNO0030.TXMLP  NNO0031.TXMLP  NNO0032.TXMLP  NNO0033.TXMLP  NNO0034.TXMLP  NNO0035.TXMLP  NNO0036.TXMLP  NNO0037.TXMLP  NNO0038.TXMLP  NNO0039.TXMLP  (+62 more)
RhoNNO/: .gitignore  CMakeLists.txt  GNUmake-depend.mk  GNUmakefile.Linux  Graph.cxx  Graph.h  MLPTracker.cxx  MLPTrackerMatrix.cxx  Makefile  Makefile.Linux  Makefile.osx  Makefile.win32  NNO0099.TXMLP  NNO0100.TXMLP  NNOTracker.cxx  NNOTracker.root  NetworkTrainer.cxx  NetworkTrainer.h  README.md  RadonOptimizer.cxx  RadonTracker.cxx  RadonTracker.root  RhoNNOCint.cxx  RhoNNOCint_rdict.pcm  RhoNNO_LinkDef.h  TDataServe.cxx  TDataServe.h  TFD.cxx  TFD.h  TGCS.cxx  TGCS.h  TGNG.cxx  TGNG.h  TGNGTracker.cxx  TGNGTracker.h  TLVQ.cxx  TLVQ.h  TMLP.cxx  TMLP.h  TNNK.cxx  (+53 more)
RhoNNO/python/: requirements.txt  setup.py
RhoNNO/python/rhonno_mlx/: __init__.py  mlp.py  xmlp.py
config/: CMakeLists.txt
lib/: README
macro/: tracks.C  writehits.C
python/: README.md  test_mlx.py  train_parity.py
python/rhonno_mlx/: convert_net.py  converter.py
tests/: TestCore.cpp  run_strain.sh  run_strain_utrain.sh  run_utrain.sh
trackml/: DataStructures.cxx  DataStructures.h  Geo.cxx  Geo.h  Graph.h  Makefile  NNO0100.TXMLP  NNO0128-6-20-10-1.TXMLP  NNO0200-6-25-15-1.TXMLP  Point.cxx  Point.h  PolarModule.cxx  PolarModule.h  ReadEvent.cxx  Tracker.cxx  Tracker.h  Tracker2.cxx  XMLP.cxx  XMLP.h  XMLP1.net  XMLP2.net  XMLP3.net  XMLP4.net  data.cxx  digraph.h  find.cxx  findtracks.cxx  input.h  main.cxx  swimmer.cxx  topquark.cxx  trackml3.nno  train.cxx
